[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umbral"
version = "1.0.0"
description = "Asynchronous Roblox API wrapper"
authors = [{name = "Orvyne Vasseur"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.8.0",
    "typing-extensions>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/orvyne/umbral"
Repository = "https://github.com/orvyne/umbral"

